Add Gradle extension API
Closes gh-1530